RESOLVED FIXED209639
REGRESSION: Unable to show Web Inspector on empty tabs in Safari
https://bugs.webkit.org/show_bug.cgi?id=209639
Summary REGRESSION: Unable to show Web Inspector on empty tabs in Safari
Chris Dumez
Reported 2020-03-26 19:06:59 PDT
Unable to show Web Inspector on empty tabs in Safari.
Attachments
Patch (7.51 KB, patch)
2020-03-26 19:13 PDT, Chris Dumez
no flags
Patch (9.83 KB, patch)
2020-03-26 19:57 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-03-26 19:07:09 PDT
Chris Dumez
Comment 2 2020-03-26 19:13:03 PDT
Darin Adler
Comment 3 2020-03-26 19:41:42 PDT
Comment on attachment 394692 [details] Patch Is there any way to make a regression test for this? After all, we broke it once
Chris Dumez
Comment 4 2020-03-26 19:46:29 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 394692 [details] > Patch > > Is there any way to make a regression test for this? After all, we broke it > once Maybe, it would have to be an API test. I will give it a shot first thing tomorrow.
Chris Dumez
Comment 5 2020-03-26 19:57:38 PDT
Chris Dumez
Comment 6 2020-03-26 19:57:50 PDT
(In reply to Chris Dumez from comment #5) > Created attachment 394696 [details] > Patch Now with API test.
EWS
Comment 7 2020-03-26 21:20:26 PDT
Committed r259103: <https://trac.webkit.org/changeset/259103> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394696 [details].
Note You need to log in before you can comment on or make changes to this bug.